* contrib.html: Mention gcc-patches and link to gcc contribution 	page. 	* contribute.html: Removed. 	* new/*: Removed. 	* done.html (Fluid Dynamics): New entry. 	* build-snapshot.html: We no longer need the old ABI.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,12 @@
+2001-01-18  Tom Tromey  <tromey@redhat.com>
+
+	* contrib.html: Mention gcc-patches and link to gcc contribution
+	page.
+	* contribute.html: Removed.
+	* new/*: Removed.
+	* done.html (Fluid Dynamics): New entry.
+	* build-snapshot.html: We no longer need the old ABI.
+
 2001-01-09  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* done.html (Tamanoir): New entry.
