* contrib.html: Mention gcc repository.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2001-01-18  Tom Tromey  <tromey@redhat.com>
 
+	* contrib.html: Mention gcc repository.
+
 	* contrib.html: Mention gcc-patches and link to gcc contribution
 	page.
 	* contribute.html: Removed.
