2001-01-23  Phil Edwards  <pme@sources.redhat.com>
	* status.html:  Mention and link to latest working GCC snapshot.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-23  Phil Edwards  <pme@sources.redhat.com>
+
+	* status.html:  Mention and link to latest working GCC snapshot.
+
 2000-12-11  Phil Edwards  <pme@sources.redhat.com>
 
 	* status.html:  Update with new results and links.
