* mail.html: Updated for new location. 	* libgcj.html: Updated for new location. 	* gcj.html: Updated for new location. 	* faq-portugese.html: Updated for new location. 	* FAQ.html: Updated for new location. 	* faq.html: Updated for new location.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,12 @@
+2001-01-27  Tom Tromey  <tromey@redhat.com>
+
+	* mail.html: Updated for new location.
+	* libgcj.html: Updated for new location.
+	* gcj.html: Updated for new location.
+	* faq-portugese.html: Updated for new location.
+	* FAQ.html: Updated for new location.
+	* faq.html: Updated for new location.
+
 2001-01-18  Tom Tromey  <tromey@redhat.com>
 
 	* contrib.html: Mention gcc repository.
