* contrib.html, about.html, docs.html, done.html, download.html, 	faq-portugese.html, index.html, projects.html, support.html, 	thanks.html, tm.html: Don't mention sources.redhat.com or Red 	Hat.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,10 @@
 2001-01-27  Tom Tromey  <tromey@redhat.com>
 
+	* contrib.html, about.html, docs.html, done.html, download.html,
+	faq-portugese.html, index.html, projects.html, support.html,
+	thanks.html, tm.html: Don't mention sources.redhat.com or Red
+	Hat.
+
 	* mail.html: Updated for new location.
 	* libgcj.html: Updated for new location.
 	* gcj.html: Updated for new location.
