* libgcj.html: Removed. 	* gcj.html: Removed. 	* FAQ.html: Removed. 	* .htaccess: New file.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,10 @@
 2001-01-27  Tom Tromey  <tromey@redhat.com>
 
+	* libgcj.html: Removed.
+	* gcj.html: Removed.
+	* FAQ.html: Removed.
+	* .htaccess: New file.
+
 	* contrib.html, about.html, docs.html, done.html, download.html,
 	faq-portugese.html, index.html, projects.html, support.html,
 	thanks.html, tm.html: Don't mention sources.redhat.com or Red
