* contrib.html, done.html, libgcj-platforms.html, projects.html: 	Updated host for email address.
	* projects.html: `java-discuss' -> `java'.
	* old-news.html: `java-discuss' -> `java'.
	* libgcj-platforms.html: `java-discuss' -> `java'.
	* index.html: `java-discuss' -> `java'.
	* faq.html: `java-discuss' -> `java'.
	* download.html: `java-discuss' -> `java'.
	* done.html: `java-discuss' -> `java'.
	* mail.html: Mention `java' mailing list, not `java-discuss'.
	Removed java-testresults mailing list.

	* .htaccess: Fixed redirects.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,20 @@
+2001-01-28  Tom Tromey  <tromey@redhat.com>
+
+	* contrib.html, done.html, libgcj-platforms.html, projects.html:
+	Updated host for email address.
+
+	* projects.html: `java-discuss' -> `java'.
+	* old-news.html: `java-discuss' -> `java'.
+	* libgcj-platforms.html: `java-discuss' -> `java'.
+	* index.html: `java-discuss' -> `java'.
+	* faq.html: `java-discuss' -> `java'.
+	* download.html: `java-discuss' -> `java'.
+	* done.html: `java-discuss' -> `java'.
+	* mail.html: Mention `java' mailing list, not `java-discuss'.
+	Removed java-testresults mailing list.
+
+	* .htaccess: Fixed redirects.
+
 2001-01-27  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj.html: Removed.
