* thanks.html: Updated Mauve link.
	* mail.html: Removed `java-testresults' from another place.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,9 @@
 2001-01-28  Tom Tromey  <tromey@redhat.com>
 
+	* thanks.html: Updated Mauve link.
+
+	* mail.html: Removed `java-testresults' from another place.
+
 	* contrib.html, done.html, libgcj-platforms.html, projects.html:
 	Updated host for email address.
 
