* about.html, contrib.html, docs.html, done.html, download.html, 	faq-portugese.html, index.html, libgcj-platforms.html, mail.html, 	projects.html, support.html, thanks.html, tm.html: Updated Mauve 	link.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,10 @@
 2001-01-28  Tom Tromey  <tromey@redhat.com>
 
+	* about.html, contrib.html, docs.html, done.html, download.html,
+	faq-portugese.html, index.html, libgcj-platforms.html, mail.html,
+	projects.html, support.html, thanks.html, tm.html: Updated Mauve
+	link.
+
 	* thanks.html: Updated Mauve link.
 
 	* mail.html: Removed `java-testresults' from another place.
