* about.html, contrib.html, docs.html, done.html, download.html, 	faq-portugese.html, faq.html, index.html, mail.html, 	port-signals.html, projects.html, support.html, thanks.html, 	tm.html: Removed keyword expansion code.
	* download.html, index.html, libgcj-platforms.html, projects.html:
	`egcs' -> `gcc'.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,6 +1,14 @@
 2001-01-28  Tom Tromey  <tromey@redhat.com>
 
 	* about.html, contrib.html, docs.html, done.html, download.html,
+	faq-portugese.html, faq.html, index.html, mail.html,
+	port-signals.html, projects.html, support.html, thanks.html,
+	tm.html: Removed keyword expansion code.
+
+	* download.html, index.html, libgcj-platforms.html, projects.html:
+	`egcs' -> `gcc'.
+
+	* about.html, contrib.html, docs.html, done.html, download.html,
 	faq-portugese.html, index.html, libgcj-platforms.html, mail.html,
 	projects.html, support.html, thanks.html, tm.html: Updated Mauve
 	link.
