* about.html: Removed.
	* download.html: Typo fix.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,9 @@
 2001-01-28  Tom Tromey  <tromey@redhat.com>
 
+	* about.html: Removed.
+
+	* download.html: Typo fix.
+
 	* about.html, contrib.html, docs.html, done.html, download.html,
 	faq-portugese.html, faq.html, index.html, mail.html,
 	port-signals.html, projects.html, support.html, thanks.html,
