* .htaccess: Added redirect for about.html.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2001-01-28  Tom Tromey  <tromey@redhat.com>
 
+	* .htaccess: Added redirect for about.html.
+
 	* about.html: Removed.
 
 	* download.html: Typo fix.
