* mail.html: Removed. 	* .htaccess: Added redirect for mail.html.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-02-02  Tom Tromey  <tromey@redhat.com>
+
+	* mail.html: Removed.
+	* .htaccess: Added redirect for mail.html.
+
 2001-01-28  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Nits.
