* index.html: Fix broken link to GDB.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-02-05  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* index.html: Fix broken link to GDB.
+
 2001-02-02  Tom Tromey  <tromey@redhat.com>
 
 	* mail.html: Removed.
