2001-02-05  Phil Edwards  <pme@sources.redhat.com>
	* index.html:  Fix link broken from the onlinedocs move.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-02-05  Phil Edwards  <pme@sources.redhat.com>
+
+	* index.html:  Fix link broken from the onlinedocs move.
+
 2001-01-28  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* links.html: Remove; contents merged into ../readings.html.
