--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-02-06  Tom Tromey  <tromey@redhat.com>
+
+	* contrib.html: Refer to new page.
+	* test.html: New file.
+
 2001-02-05  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* index.html: Fix broken link to GDB.
