* test.html: Fixed Jacks link.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2001-02-06  Tom Tromey  <tromey@redhat.com>
 
+	* test.html: Fixed Jacks link.
+
 	* contrib.html: Refer to new page.
 	* test.html: New file.
 
