* build-snapshot.html: Replace redundant <body> tags. Fix 	<tr bgcolor="..."> tags. 	* compile.html: Add <body>, </body>, and </html>. Remove 	<!--#include virtual...>. 	* contrib.html: Add <head> and <body> tags. 	* docs.html: Ditto. 	* done.html: Add </body> and </html>. Remove superflous <h2> and 	<!--#include virtual=...>.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,14 @@
+2001-02-07  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* build-snapshot.html: Replace redundant <body> tags. Fix 
+	<tr bgcolor="..."> tags.
+	* compile.html: Add <body>, </body>, and </html>. Remove
+	<!--#include virtual...>.
+	* contrib.html: Add <head> and <body> tags.
+	* docs.html: Ditto.
+	* done.html: Add </body> and </html>. Remove superflous <h2> and
+	<!--#include virtual=...>.
+
 2001-02-06  Tom Tromey  <tromey@redhat.com>
 
 	* test.html: Fixed Jacks link.
