--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2001-02-07  Tom Tromey  <tromey@redhat.com>
+
+	* contrib.html, docs.html, done.html, download.html,
+	faq-portugese.html, index.html, projects.html, support.html,
+	thanks.html, tm.html: Updated gnats links.
+
 2001-02-07  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* build-snapshot.html: Replace redundant <body> tags. Fix 
