* faq-portugese.html, faq.html, gcj2.html, libgcj-platforms.html, 	libgcj2.html: Remove `#include virtual'.
	* contrib.html, docs.html, done.html, download.html,
	faq-portugese.html, faq.html, index.html, projects.html,
	thanks.html, tm.html: Use navigation bar from style.mhtml.

	* download.html, faq-portugese.html: Use absolute link for gnatsweb.

	* support.html: Removed.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,16 @@
+2001-02-08  Tom Tromey  <tromey@redhat.com>
+
+	* faq-portugese.html, faq.html, gcj2.html, libgcj-platforms.html,
+	libgcj2.html: Remove `#include virtual'.
+
+	* contrib.html, docs.html, done.html, download.html,
+	faq-portugese.html, faq.html, index.html, projects.html,
+	thanks.html, tm.html: Use navigation bar from style.mhtml.
+
+	* download.html, faq-portugese.html: Use absolute link for gnatsweb.
+
+	* support.html: Removed.
+
 2001-02-07  Tom Tromey  <tromey@redhat.com>
 
 	* contrib.html, docs.html, done.html, download.html,
