* docs.html: Added missing <GCJNAV>.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2001-02-08  Tom Tromey  <tromey@redhat.com>
 
+	* docs.html: Added missing <GCJNAV>.
+
 	* faq-portugese.html, faq.html, gcj2.html, libgcj-platforms.html,
 	libgcj2.html: Remove `#include virtual'.
 
