* download.html: Add <head> tags. Remove bgcolor from <body> and 	an extraneous line. 	* thanks.html:  Ditto. 	* gcj2.html: Add <body> and </html> tags.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,10 @@
+2001-02-08  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* download.html: Add <head> tags. Remove bgcolor from <body> and
+	an extraneous line.
+	* thanks.html:  Ditto.
+	* gcj2.html: Add <body> and </html> tags.
+
 2001-02-08  Tom Tromey  <tromey@redhat.com>
 
 	* docs.html: Added missing <GCJNAV>.
