* index.html: Update the "what is GCJ" section. Move "what is GCJ" to 	top of page. Add classpath link. Add note about API implementation 	status. Move older news items to... 	* old-news.html: ... here. 	* download.html: Remove links to release version and replace with 	explanation. Change "gcj"/"gcc" -> "GCJ"/"GCC". Remove obsolete 	"development tree status" section. Remove broken references to AG's 	RPMs.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,14 @@
+2001-02-09  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* index.html: Update the "what is GCJ" section. Move "what is GCJ" to
+	top of page. Add classpath link. Add note about API implementation
+	status. Move older news items to...
+	* old-news.html: ... here.
+	* download.html: Remove links to release version and replace with
+	explanation. Change "gcj"/"gcc" -> "GCJ"/"GCC". Remove obsolete
+	"development tree status" section. Remove broken references to AG's
+	RPMs.
+
 2001-02-08  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* download.html: Add <head> tags. Remove bgcolor from <body> and
