* index.html: Added news item on mods for regression highlighting 	in the library via recent Mauve mods.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-02-13  Warren Levy  <warrenl@redhat.com>
+
+	* index.html: Added news item on mods for regression highlighting
+	in the library via recent Mauve mods.
+
 2001-02-09  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* index.html: Update the "what is GCJ" section. Move "what is GCJ" to
