* index.html: Fixed a formatting typo.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,9 @@
 2001-02-13  Warren Levy  <warrenl@redhat.com>
 
+	* index.html: Fixed a formatting typo.
+
+2001-02-13  Warren Levy  <warrenl@redhat.com>
+
 	* index.html: Added news item on mods for regression highlighting
 	in the library via recent Mauve mods.
 
