--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-02-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* libgcj2.html: Add <body> and </html> tags.
+	* libgcj-platforms.html: Likewise. Remove "Last modified".
+
 2001-02-13  Warren Levy  <warrenl@redhat.com>
 
 	* index.html: Fixed a formatting typo.
