2001-02-19  Phil Edwards  <pme@sources.redhat.com>
	* download.html:  Point to new FTP location.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-02-19  Phil Edwards  <pme@sources.redhat.com>
+
+	* download.html:  Point to new FTP location.
+
 2001-02-05  Phil Edwards  <pme@sources.redhat.com>
 
 	* index.html:  Fix link broken from the onlinedocs move.
