2001-02-21  Stephen M. Webb  <stephen.webb@cybersafe.com>
	* status.html:  Point to last snapshot usable with 2.95.x.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-02-21  Stephen M. Webb  <stephen.webb@cybersafe.com>
+
+	* status.html:  Point to last snapshot usable with 2.95.x.
+
 2001-02-19  Phil Edwards  <pme@sources.redhat.com>
 
 	* download.html:  Point to new FTP location.
