--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2001-03-07  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* index.html: Add note about GCC 3.0 snapshots being available.
+	Add "Home Page" to <title>. Move pre-January news items to...
+	* old-news.html: ...here.
+
 2001-02-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* libgcj2.html: Add <body> and </html> tags.
