--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2001-03-16  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* old-news.html, port-files.html, port-signals.html,
+	port-threads.html: Perform various markup fixes and add some blank
+	lines.
+	
 2001-03-07  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* index.html: Add note about GCC 3.0 snapshots being available.
