--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-03-19  Tom Tromey  <tromey@redhat.com>
+
+	* contrib.html: Don't link to libgcj-assign.txt.
+	* libgcj-assign.txt: Removed.
+
 2001-03-16  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* old-news.html, port-files.html, port-signals.html,
