2001-03-21  Alexandre Petit-Bianco  <apbianco@redhat.com>
	* contrib.html (Checkings and Gnats): `java' replaces `gcj'.

(http://gcc.gnu.org/ml/gcc-patches/2001-03/msg01584.html)

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-03-21  Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* contrib.html (Checkings and Gnats): `java' replaces `gcj'.
+
 2001-03-19  Tom Tromey  <tromey@redhat.com>
 
 	* contrib.html: Don't link to libgcj-assign.txt.
