* faq.html: Fix markup. 	* merge-status.html: Ditto.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-03-23  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* faq.html: Fix markup.
+	* merge-status.html: Ditto.
+
 2001-03-21  Alexandre Petit-Bianco  <apbianco@redhat.com>
 
 	* contrib.html (Checkings and Gnats): `java' replaces `gcj'.
