* index.html: Add some new news. Move some old news to... 	* old-news.html: ...here.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-03-26  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* index.html: Add some new news. Move some old news to...
+	* old-news.html: ...here.
+
 2001-03-23  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* faq.html: Fix markup.
