2001-03-26  Alexandre Petit-Bianco  <apbianco@redhat.com>
	* faq.html (5.1): Fixed indentation, mentionned archive check.

(http://gcc.gnu.org/ml/java-patches/2001-q1/msg00495.html)

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-03-26  Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* faq.html (5.1): Fixed indentation, mentionned archive check.
+
 2001-03-26  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* index.html: Add some new news. Move some old news to...
