--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-06  Phil Edwards  <pme@sources.redhat.com>
+
+	* index.html:  Mention new snapshot.
+
 2001-02-21  Stephen M. Webb  <stephen.webb@cybersafe.com>
 
 	* status.html:  Point to last snapshot usable with 2.95.x.
