2001-04-13  Phil Edwards  <pme@sources.redhat.com>
	* index.html:  Fix typo on release date.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-13  Phil Edwards  <pme@sources.redhat.com>
+
+	* index.html:  Fix typo on release date.
+
 2001-04-06  Phil Edwards  <pme@sources.redhat.com>
 
 	* index.html:  Mention new snapshot.
