* faq.html (5.7): Renumbered to 4.7. 	(6.2): New FAQ: Is it possible to invoke GCJ compiled Java code from 	a C++ application?

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2001-04-17  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* faq.html (5.7): Renumbered to 4.7.
+	(6.2): New FAQ: Is it possible to invoke GCJ compiled Java code from
+	a C++ application?
+
 2001-03-26  Alexandre Petit-Bianco  <apbianco@redhat.com>
 
 	* faq.html (5.1): Fixed indentation, mentionned archive check.
