--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,9 @@
 2001-04-17  Bryce McKinlay  <bryce@albatross.co.nz>
 
+	* gdb.html: Updated gdb version requirements to reflect V3 ABI.
+
+2001-04-17  Bryce McKinlay  <bryce@albatross.co.nz>
+
 	* faq.html (5.7): Renumbered to 4.7.
 	(6.2): New FAQ: Is it possible to invoke GCJ compiled Java code from
 	a C++ application?
