* gdb.html: Add note about debugging vs optimzation.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-18  Bryce McKinlay  <bryce@albatross.co.nz>
+
+	* gdb.html: Add note about debugging vs optimzation.
+	
 2001-04-17  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* gdb.html: Updated gdb version requirements to reflect V3 ABI.
