* index.html: Mention java.security merge.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-04-25  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Mention java.security merge.
+
 2001-04-18  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* gdb.html: Add note about debugging vs optimzation.
