--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2001-05-17  Phil Edwards  <pme@sources.redhat.com>
+
+	* status.html:  Update "latest working snapshot" version.
+	* thanks.html:  More people.
+
 2001-04-13  Phil Edwards  <pme@sources.redhat.com>
 
 	* index.html:  Fix typo on release date.
