2001-05-23  Phil Edwards  <pme@sources.redhat.com>
	* libstdc++-2.90.8-compat-gcc-2.95.3.diff:  New file.
	* status.html:  Point to it.  Mention 2.95.3 situation.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2001-05-23  Phil Edwards  <pme@sources.redhat.com>
+
+	* libstdc++-2.90.8-compat-gcc-2.95.3.diff:  New file.
+	* status.html:  Point to it.  Mention 2.95.3 situation.
+
 2001-05-17  Phil Edwards  <pme@sources.redhat.com>
 
 	* status.html:  Update "latest working snapshot" version.
