--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-05-25  Kelley Cook <kelley.cook@home.com>
+
+	* status.html:  Fix typo.
+
 2001-05-23  Phil Edwards  <pme@sources.redhat.com>
 
 	* libstdc++-2.90.8-compat-gcc-2.95.3.diff:  New file.
