--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-05-30  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* index.html: Mention hash synchronization.
+
 2001-04-25  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention java.security merge.
