2001-06-13  Phil Edwards  <pme@sources.redhat.com>
	* thanks.html:  Mention more people.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-06-13  Phil Edwards  <pme@sources.redhat.com>
+
+	* thanks.html:  Mention more people.
+
 2001-05-25  Kelley Cook <kelley.cook@home.com>
 
 	* status.html:  Fix typo.
