--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-06-19  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* index.html, download.html, old-news.html: Updates mentioning GCC 3.0
+	release.
+
 2001-05-30  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* index.html: Mention hash synchronization.
