* contrib.html: Added tag for Testing section. 	* old-news.html: Updated section on library testing and added 	links to more detailed descriptions. 	* test.html: Added section on General Runtime Testing and added 	a description of regression testing handling for Mauve.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,11 @@
+2001-06-22  Warren Levy  <warrenl@redhat.com>
+
+	* contrib.html: Added tag for Testing section.
+	* old-news.html: Updated section on library testing and added
+	links to more detailed descriptions.
+	* test.html: Added section on General Runtime Testing and added
+	a description of regression testing handling for Mauve.
+
 2001-06-19  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* index.html, download.html, old-news.html: Updates mentioning GCC 3.0
