2001-06-25  Phil Edwards  <pme@sources.redhat.com>
	* index.html:  Mention GCC 3.0 (as containing libstdc++-v3).
	* status.html:  Likwise.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2001-06-25  Phil Edwards  <pme@sources.redhat.com>
+
+	* index.html:  Mention GCC 3.0 (as containing libstdc++-v3).
+	* status.html:  Likwise.
+
 2001-06-13  Phil Edwards  <pme@sources.redhat.com>
 
 	* thanks.html:  Mention more people.
