* test.html: Added GCJNAV for navigation style sheet.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-06-25  Warren Levy  <warrenl@redhat.com>
+
+	* test.html: Added GCJNAV for navigation style sheet.
+
 2001-06-22  Warren Levy  <warrenl@redhat.com>
 
 	* contrib.html: Added tag for Testing section.
