--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-07-11  Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* faq.html (1.1): Fixed typo.
+
 2001-06-25  Warren Levy  <warrenl@redhat.com>
 
 	* test.html: Added GCJNAV for navigation style sheet.
