--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-07-13  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* contrib.html: The project is called GCC, not gcc. Fix two
+	broken links by making them relative.
+
 2001-07-11  Alexandre Petit-Bianco  <apbianco@redhat.com>
 
 	* faq.html (1.1): Fixed typo.
