* index.html: Changed Classpath link.  From Marcus Smith.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-14  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Changed Classpath link.  From Marcus Smith.
+
 2001-07-13  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* contrib.html: The project is called GCC, not gcc. Fix two
