* contrib.html, done.html, libgcj-platforms.html, old-news.html: 	Use absolute reference for mailing list URLs.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-08-15  Tom Tromey  <tromey@redhat.com>
+
+	* contrib.html, done.html, libgcj-platforms.html, old-news.html:
+	Use absolute reference for mailing list URLs.
+
 2001-08-14  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Changed Classpath link.  From Marcus Smith.
