* index.html: Mention RMI.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-27  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Mention RMI.
+
 2001-08-15  Tom Tromey  <tromey@redhat.com>
 
 	* contrib.html, done.html, libgcj-platforms.html, old-news.html:
