* index.html: Remove extra <table> tag.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-28  Matt Kraai  <kraai@alumni.carnegiemellon.edu>
+
+	* index.html: Remove extra <table> tag.
+
 2001-08-27  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention RMI.
