* faq.html: Mention RMI. 	* index.html: Updated RMI announcement; don't claim that RMI is 	unsupported.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2001-08-31  Tom Tromey  <tromey@redhat.com>
+
+	* faq.html: Mention RMI.
+	* index.html: Updated RMI announcement; don't claim that RMI is
+	unsupported.
+
 2001-08-28  Matt Kraai  <kraai@alumni.carnegiemellon.edu>
 
 	* index.html: Remove extra <table> tag.
