--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-09-07  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Mention gcj -R as news.
+
 2001-08-31  Tom Tromey  <tromey@redhat.com>
 
 	* faq.html: Mention RMI.
