--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,10 @@
+2001-09-12  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* done.html: Fix broken mailto: URL.
+
+	* faq.html: Remove broken link to the FSF Copyright Assignment
+	Forms.
+
 2001-09-07  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention gcj -R as news.
