* libgcj-classpath-compare.html: Rebuilt. 	* scripts/gen-classpath-compare: Don't put color in <body>.  Added 	<html> tag.  Use <em> instead of <b>, and <code> instead of <tt>.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2001-09-14  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+	* scripts/gen-classpath-compare: Don't put color in <body>.  Added
+	<html> tag.  Use <em> instead of <b>, and <code> instead of <tt>.
+
 2001-09-13  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Link to classpath merge document.
