--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,6 +1,8 @@
 2001-09-14  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
+
+	* libgcj-classpath-compare.html: Rebuilt.
 	* scripts/gen-classpath-compare: Don't put color in <body>.  Added
 	<html> tag.  Use <em> instead of <b>, and <code> instead of <tt>.
 
