* old-news.html: Remove dead link. 	* build-snapshot.html: Link to GCC snapshot page.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,8 @@
 2001-09-14  Tom Tromey  <tromey@redhat.com>
 
+	* old-news.html: Remove dead link.
+	* build-snapshot.html: Link to GCC snapshot page.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 	* libgcj-classpath-compare.html: Rebuilt.
