2001-09-14  Phil Edwards  <pme@sources.redhat.com>
	* index.html:  Fix broken link.  Mention new versioning scheme to
	minimize future bug reports.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2001-09-14  Phil Edwards  <pme@sources.redhat.com>
+
+	* index.html:  Fix broken link.  Mention new versioning scheme to
+	minimize future bug reports.
+
 2001-06-25  Phil Edwards  <pme@sources.redhat.com>
 
 	* index.html:  Mention GCC 3.0 (as containing libstdc++-v3).
