* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2001-09-14  Tom Tromey  <tromey@redhat.com>
 
+	* libgcj-classpath-compare.html: Rebuilt.
+
 	* old-news.html: Remove dead link.
 	* build-snapshot.html: Link to GCC snapshot page.
 
