2001-09-17  Phil Edwards  <pme@gcc.gnu.org>
	* index.html:  Play catch-up to fix broken (changing) link.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-09-17  Phil Edwards  <pme@gcc.gnu.org>
+
+	* index.html:  Play catch-up to fix broken (changing) link.
+
 2001-09-14  Phil Edwards  <pme@sources.redhat.com>
 
 	* index.html:  Fix broken link.  Mention new versioning scheme to
