2001-09-17  Phil Edwards  <pme@gcc.gnu.org>
	* download.html:  HTML to XHTML change.  Lowercase tags.
	* footer.ihtml:  Likewise.
	* header.ihtml:  Likewise.
	* index.html:  Likewise.
	* status.html:  Likewise.
	* thanks.html:  Likewise.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,5 +1,14 @@
 2001-09-17  Phil Edwards  <pme@gcc.gnu.org>
 
+	* download.html:  HTML to XHTML change.  Lowercase tags.
+	* footer.ihtml:  Likewise.
+	* header.ihtml:  Likewise.
+	* index.html:  Likewise.
+	* status.html:  Likewise.
+	* thanks.html:  Likewise.
+
+2001-09-17  Phil Edwards  <pme@gcc.gnu.org>
+
 	* index.html:  Play catch-up to fix broken (changing) link.
 
 2001-09-14  Phil Edwards  <pme@sources.redhat.com>
