2001-10-01  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
        * index.html: Update link to GCC 3.0.
CVa: ----------------------------------------------------------------------

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-01  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* index.html: Update link to GCC 3.0.
+
 2001-09-17  Phil Edwards  <pme@gcc.gnu.org>
 
 	* download.html:  HTML to XHTML change.  Lowercase tags.
