* docs.html: Fix broken/redirected links. 	* download.html: Ditto. 	* faq-portugese.html: Ditto. 	* old-news.html: Ditto. 	* thanks.html: Ditto.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,11 @@
+2001-10-01  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* docs.html: Fix broken/redirected links.
+	* download.html: Ditto.
+	* faq-portugese.html: Ditto.
+	* old-news.html: Ditto.
+	* thanks.html: Ditto.
+
 2001-09-30  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
