2001-09-29  Alexandre Petit-Bianco  <apbianco@redhat.com>
	* paper/table.gif: Deleted.
	* paper/page.gif: Deleted.
	* paper/cygnus-logo-notype-small.gif: Deleted.
	* paper/table.png: New file.
	* paper/page.png: New file.
	* paper/nosb.html (cygnus-logo-notype-small.gif): Table entry removed.
	(table.png): Replaces table.gif.
	(page.png): Replaces page.gif.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -10,6 +10,17 @@
 
 	* libgcj-classpath-compare.html: Rebuilt.
 
+2001-09-29  Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* paper/table.gif: Deleted.
+	* paper/page.gif: Deleted.
+	* paper/cygnus-logo-notype-small.gif: Deleted.
+	* paper/table.png: New file.
+	* paper/page.png: New file.
+	* paper/nosb.html (cygnus-logo-notype-small.gif): Table entry removed.
+	(table.png): Replaces table.gif.
+	(page.png): Replaces page.gif.
+
 2001-09-26  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
