2001-10-01  Alexandre Petit-Bianco  <apbianco@redhat.com>
	* done.html (PAL): Fix URL to project page
	(ADFC): Likewise.

( http://gcc.gnu.org/ml/java-patches/2001-q4/msg00002.html )

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-01  Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* done.html (PAL): Fix URL to project page
+	(ADFC): Likewise.
+
 2001-10-01  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* docs.html: Fix broken/redirected links.
