--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-01  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2001-10-01  Alexandre Petit-Bianco  <apbianco@redhat.com>
 
 	* done.html (PAL): Fix URL to project page
