--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,10 @@
+2001-10-02  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* docs.html: Update links for Per Bothner.
+
+	* papers/nosb.html: Update link to Java page and Cygnus/Red Hat
+	site.  Fix markup.
+
 2001-10-01  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
