* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-03  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2001-10-02  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* docs.html: Update links for Per Bothner.
