* index.html: Mention java.lang.ref.*.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2001-10-03  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Mention java.lang.ref.*.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 2001-10-02  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
