--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-09  Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* contrib.html (Copyright Assignment): Added missing space, email
+	address.
+
 2001-10-08  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
