2001-10-09  Phil Edwards  <pme@gcc.gnu.org>
	* download.html:  More HTML->XHTML and lowercasing of tags.
	* index.html:  Likewise.
	* status.html:  Likewise.
	* thanks.html:  Likewise.  More thanks.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,10 @@
+2001-10-09  Phil Edwards  <pme@gcc.gnu.org>
+
+	* download.html:  More HTML->XHTML and lowercasing of tags.
+	* index.html:  Likewise.
+	* status.html:  Likewise.
+	* thanks.html:  Likewise.  More thanks.
+
 2001-10-01  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* index.html: Update link to GCC 3.0.
