--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-16  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* download.html: Update cvsweb URL.
+
 2001-10-09  Phil Edwards  <pme@gcc.gnu.org>
 
 	* download.html:  More HTML->XHTML and lowercasing of tags.
