--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-16  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+	* scripts/gen-classpath-compare: Don't compare javax.* for now.
+
 2001-10-16  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* projects.html: Adjust link to the mailing-list archives from
