* libgcj-classpath-compare.html: Rebuilt. 	* scripts/gen-classpath-compare: Fix javax.* exclusion.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-19  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+	* scripts/gen-classpath-compare: Fix javax.* exclusion.
+
 2001-10-16  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
