* index.html: Mention javax.naming and javax.transaction.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-24  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Mention javax.naming and javax.transaction.
+
 2001-10-19  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
