* projects.html: Removed items which have been done.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-26  Tom Tromey  <tromey@redhat.com>
+
+	* projects.html: Removed items which have been done.
+
 2001-10-24  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: We finished javax.naming -- AG started it.
