--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-06  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Added news item for verifier.
+	* projects.html: Remove bytecode verifier from project list.
+
 2001-10-26  Tom Tromey  <tromey@redhat.com>
 
 	* projects.html: Removed items which have been done.
