--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2001-11-06  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: HTML fixlet.
+
 	* index.html: Added news item for verifier.
 	* projects.html: Remove bytecode verifier from project list.
 
