* index.html: Restored deleted <table>.  Added clarifying 	comments.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,8 @@
 2001-11-06  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Restored deleted <table>.  Added clarifying
+	comments.
+
 	* index.html: HTML fixlet.
 
 	* index.html: Added news item for verifier.
