--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-12  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* cni-2.txt: Update to reflect GCJ 3.x.
+	* faq.html: Various updates and fixes.
+	* download.html: Likewise.
+	* test.html: Likewise.
+
 2001-11-11  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
