--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -4,6 +4,7 @@
 	* faq.html: Various updates and fixes.
 	* download.html: Likewise.
 	* test.html: Likewise.
+	* jni-comp.txt: New file, JNI example from Glenn Chambers.
 
 2001-11-11  Tom Tromey  <tromey@redhat.com>
 
