2001-11-14  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
	* papers/gcc-java.html: Fix contact information for Per Bothner.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-14  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* papers/gcc-java.html: Fix contact information for Per Bothner.
+
 2001-11-12  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* cni-2.txt: Update to reflect GCJ 3.x.
