* done.html: Fix broken links. 	* faq-portugese.html: Likewise. 	* faq.html: Likewise. 	* thanks.html: Likewise.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-14  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* done.html: Fix broken links.
+	* faq-portugese.html: Likewise.
+	* faq.html: Likewise.
+	* thanks.html: Likewise.
+
 2001-11-14  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* papers/gcc-java.html: Fix contact information for Per Bothner.
