--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-15  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* download.html: Remove CVS instructions, point to GCC CVS page
+	instead.
+
 2001-12-14  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention Hans' patch.
