* port-threads.html: Updated.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -2,6 +2,8 @@
 
 	* download.html: Remove CVS instructions, point to GCC CVS page
 	instead.
+	
+	* port-threads.html: Updated.
 
 2001-12-14  Tom Tromey  <tromey@redhat.com>
 
