--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-15  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2001-12-15  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* download.html: Remove CVS instructions, point to GCC CVS page
