2001-12-19  Phil Edwards  <pme@gcc.gnu.org>
	* download.html:  Point to status page.
	* index.html:  Mention new snapshot.
	* status.html:  Update.
	* thanks.html:  Update.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-19  Phil Edwards  <pme@gcc.gnu.org>
+
+	* download.html:  Point to status page.
+	* index.html:  Mention new snapshot.
+	* status.html:  Update.
+	* thanks.html:  Update.
+
 2001-10-16  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* download.html: Update cvsweb URL.
