* old-news.html (happening): Update Classpath link.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-22  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* old-news.html (happening): Update Classpath link.
+
 2001-12-16  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
@@ -1024,5 +1028,3 @@ Thu Dec  2 17:25:15 1999  Anthony Green  <green@cygnus.com>
 	option.
 
 	* FAQ.html: Removed faq about why gcj isn't in egcs.
-	
-
