2001-12-27  Phil Edwards  <pme@gcc.gnu.org>
	* index.html:  Fix date.
	* status.html:  Update last-known-good GCC snapshot.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-27  Phil Edwards  <pme@gcc.gnu.org>
+
+	* index.html:  Fix date.
+	* status.html:  Update last-known-good GCC snapshot.
+
 2001-12-19  Phil Edwards  <pme@gcc.gnu.org>
 
 	* download.html:  Point to status page.
