* docs.html: Remove broken URL to Alex Petit-Bianco.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-29  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* docs.html: Remove broken URL to Alex Petit-Bianco.
+
 2001-12-22  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* old-news.html (happening): Update Classpath link.
