--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-12  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2001-12-29  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* docs.html: Remove broken URL to Alex Petit-Bianco.
