* libgcj-classpath-compare.html: Rebuilt. 	* scripts/gen-classpath-compare: Include AWT in comparisons.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-13  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+	* scripts/gen-classpath-compare: Include AWT in comparisons.
+
 2002-01-12  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
