--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -3,6 +3,10 @@
 	* libgcj-classpath-compare.html: Rebuilt.
 	* scripts/gen-classpath-compare: Include AWT in comparisons.
 
+2002-01-12  Alexandre Petit-Bianco  <apbianco@redhast.com>
+
+	* done.html: Added XWT.
+
 2002-01-12  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
