--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-14  Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* done.html (XWT): Fixed typo.
+
 2002-01-13  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
