--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-15  Tom Tromey  <tromey@redhat.com>
+
+	* scripts/gen-classpath-compare (OUTPUT): Correctly compute.
+
 2002-01-14  Alexandre Petit-Bianco  <apbianco@redhat.com>
 
 	* done.html (XWT): Fixed typo.
