--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-15  Tom Tromey  <tromey@redhat.com>
 
+	* libgcj-classpath-compare.html: Rebuilt.
+
 	* scripts/gen-classpath-compare (OUTPUT): Correctly compute.
 
 2002-01-14  Alexandre Petit-Bianco  <apbianco@redhat.com>
