* index.html: Added a couple pending news items.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-22  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Added a couple pending news items.
+
 2002-01-17  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
