--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -2,6 +2,8 @@
 
 	* libgcj-classpath-compare.html: Rebuilt.
 
+	* libgcj-classpath-compare.html: Rebuilt.
+
 	* index.html: Added a couple pending news items.
 
 2002-01-17  Tom Tromey  <tromey@redhat.com>
