* index.html: Mention builtins patch.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-22  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Mention builtins patch.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 	* libgcj-classpath-compare.html: Rebuilt.
