* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -2,6 +2,8 @@
 
 	* libgcj-classpath-compare.html: Rebuilt.
 
+	* libgcj-classpath-compare.html: Rebuilt.
+
 	* index.html: Wording fix suggested by Gerald.
 
 2002-01-22  Tom Tromey  <tromey@redhat.com>
