--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-28  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* thanks.html: Update GCC Contributors URL.
+
+	* old-news.html: Update Classpath URL.
+
 2002-01-23  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
