--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-28  Phil Edwards  <pme@gcc.gnu.org>
+
+	* status.html:  Update last-known-good GCC snapshot.
+
 2001-12-27  Phil Edwards  <pme@gcc.gnu.org>
 
 	* index.html:  Fix date.
