--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-01  Phil Edwards  <pme@gcc.gnu.org>
+
+	* index.html:  Mention new snapshot and doxygen project.
+
 2002-01-28  Phil Edwards  <pme@gcc.gnu.org>
 
 	* status.html:  Update last-known-good GCC snapshot.
