* compile.html: Fixed grammatical errors. 	* faq.html: Use "optimize", not "optimise".

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-02  Tom Tromey  <tromey@redhat.com>
+
+	* compile.html: Fixed grammatical errors.
+	* faq.html: Use "optimize", not "optimise".
+
 2002-01-28  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* thanks.html: Update GCC Contributors URL.
