--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,12 @@
+2002-02-18  Andrea Bocci <fwyzard@inwind.it>
+
+	* download.html:  Full XHTML 1.0 compliance.
+	* footer.ihtml:  Likewise.
+	* header.ihtml:  Likewise.
+	* index.html:  Likewise.
+	* status.html:  Likewise.
+	* thanks.html:  Likewise.
+
 2002-02-01  Phil Edwards  <pme@gcc.gnu.org>
 
 	* index.html:  Mention new snapshot and doxygen project.
