2002-02-28  Alexandre Petit-Bianco  <apbianco@redhat.com>
        * index.html (GCJ News): Mentionned Bryce's array check
        improvements.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-28  Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* index.html (GCJ News): Mentionned Bryce's array check
+	improvements.
+
 2002-02-17  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
