--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-06  Phil Edwards  <pme@gcc.gnu.org>
+
+	* index.html:  Mention new snapshot.
+
 2002-02-18  Andrea Bocci <fwyzard@inwind.it>
 
 	* download.html:  Full XHTML 1.0 compliance.
