--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-14  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html: New file.
+
 2002-02-28  Alexandre Petit-Bianco  <apbianco@redhat.com>
 
 	* index.html (GCJ News): Mentionned Bryce's array check
