--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-15  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html: Anthony fixed PR 5912.  New bugs added.
+	Platforms updated.
+	
 2002-03-14  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html: New file.
