* gcj-3.1-status.html: 5966 is not gcj-specific.  Added Gnats 	links.  Updated test suite regression info.  Broke out platform 	table.  Added package table.
	* index.html: Changed /tt to /code.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,11 @@
 2002-03-15  Tom Tromey  <tromey@redhat.com>
 
+	* gcj-3.1-status.html: 5966 is not gcj-specific.  Added Gnats
+	links.  Updated test suite regression info.  Broke out platform
+	table.  Added package table.
+
+	* index.html: Changed /tt to /code.
+
 	* gcj-3.1-status.html: Anthony fixed PR 5912.  New bugs added.
 	Platforms updated.
 	
