--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-15  Tom Tromey  <tromey@redhat.com>
 
+	* gcj-3.1-status.html: Solaris 2.5.1 is ok.  PR 5924 fixed.
+
 	* gcj-3.1-status.html: Closed 5944.  Added 5874.
 
 	* gcj-3.1-status.html: Removed `thanks' item.
