2002-03-15  Eric Blake  <ebb9@email.byu.edu>
	* thanks.html: Fix punctuation, alphabetization.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-15  Eric Blake  <ebb9@email.byu.edu>
+
+	* thanks.html: Fix punctuation, alphabetization.
+
 2002-03-15  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html: Solaris 2.5.1 is ok.  PR 5924 fixed.
