--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-17  Andrea Bocci <fwyzard@inwind.it>
+
+	* faq.html: Converted to XHTML 1.0.
+
 2002-03-15  Eric Blake  <ebb9@email.byu.edu>
 
 	* thanks.html: Fix punctuation, alphabetization.
